vlib/v/checker/tests/selector_struct_init_amp_err.vv
struct Object {
	a int = 123
}

fn test_main() {
	field := &Object{}.a
	assert field == 123
}
